2009-01-27  Vincent Untz  <vuntz@gnome.org>

	* org.gnome.ClockApplet.Mechanism.conf: allow the destination (and
	implying therefore all interfaces on this destination) instead of a
	non-existing interface...

2009-01-21  Frederic Crozat  <fcrozat@mandriva.com>

	* clock-location-tile.c:
	* clock.c:
	* gnome-clock-applet-mechanism.c: fix
	format security warning.

==================== 2.25.5.1 ====================

==================== 2.25.5 ====================

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: correctly position the Time label in the set system time
	dialog

2009-01-08  Vincent Untz  <vuntz@gnome.org>

	* clock-location.c: (clock_location_new): use
	clock_location_get_valid_weather_code()
	(clock_location_get_valid_weather_code): new, to use "-" for empty code
	(clock_location_set_weather_code): use
	clock_location_get_valid_weather_code()
	(setup_weather_updates): update to use WEATHER_EMPTY_CODE
	Fix bug #560200 (crash on Solaris when the weather code is empty)

2009-01-08  Vincent Untz  <vuntz@gnome.org>

	* clock-utils.[ch]: (clock_locale_supports_am_pm): new
	(clock_locale_format): use clock_locale_supports_am_pm
	* clock.c: (ensure_prefs_window_is_created): hide the options to use 12
	or 24 hour format if there's no AM/PM string.
	* clock.glade: name a widget

2009-01-07  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: add LIBPANEL_APPLET_LIBS to LDADD since we don't really
	use the libpanel-applet pkg-config file. Fix build issue with
	"-Wl,-z,defs".

==================== 2.25.3 ====================

2008-12-13  Vincent Untz  <vuntz@gnome.org>

	* clock.glade: show day of week header in "set time" calendar
	Fix bug #564407.

2008-12-11  Vincent Untz  <vuntz@gnome.org>

	* clock-utils.[ch]: (clock_utils_display_help): get rid of
	gnome_help_display_desktop_on_screen(), and improve code
	* clock.c: (prefs_help), (display_help_dialog): trivial update

2008-12-09  Vincent Untz  <vuntz@gnome.org>
